--- a/qt_ui.ui
+++ b/qt_ui.ui
@@ -749,13 +749,6 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="2">
-      <widget class="QPushButton" name="clear_btn">
-       <property name="text">
-        <string>Clear Table</string>
-       </property>
-      </widget>
-     </item>
      <item row="5" column="1">
       <widget class="QLineEdit" name="FSR_entry">
        <property name="text">
@@ -770,7 +763,21 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
+     <item row="9" column="0">
+      <widget class="QPushButton" name="export_btn">
+       <property name="text">
+        <string>Export Sleected</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="3">
+      <widget class="QPushButton" name="clear_btn">
+       <property name="text">
+        <string>Clear Table</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="2">
       <widget class="QPushButton" name="delete_btn">
        <property name="text">
         <string>Delete Selected</string>
@@ -796,7 +803,7 @@
       <string>TextLabel</string>
      </property>
     </widget>
-    <widget class="QListWidget" name="scan_images"/>
+    <widget class="QListWidget" name="spectrograph"/>
     <widget class="MplWidget" name="graph_panel" native="true"/>
    </widget>
    <widget class="QPushButton" name="screenshot_btn">
